# dart_ffi_poc

./: .gitignore  ARCHITECTURE.md  BUILD_INSTRUCTIONS.md  NATIVE_BUILD_FIX.md  NATIVE_SOURCES.md  README.md  README_VISUALIZATION.md  SETUP_QUICK_START.md  TROUBLESHOOTING.md  iOS_SETUP.md  prompt.md  pubspec.yaml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt
android/app/src/main/kotlin/com/example/dart_ffi_poc/: MainActivity.kt
android/src/main/cpp/: CMakeLists.txt  calculator.cpp  math_lib.h
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
ios/Runner/Scripts/: link_native_sources.sh
lib/: main.dart
lib/bindings/: calculator_bindings.dart  math_lib_bindings.dart
lib/screens/: part1_easy_binding.dart  part2_cpp_wrapper.dart
native/: CMakeLists.txt
native/cpp/: calculator.hpp  calculator_c_api.cpp  calculator_c_api.h  math_lib.c
test/: widget_test.dart
